paper-icon-button layout issue fixed

--- a/paper-select.css
+++ b/paper-select.css
@@ -83,10 +83,6 @@
   background-color: #d34336;
 }
 
-:host #selectedList > * {
-  width: auto;
-}
-
 :host #input {
   position: relative;
   display: inline-block;
